# Syndesium

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.txt  TODO
docs/: adding-components.md
gui/: ApiClient.cpp  ApiClient.hpp  CMakeLists.txt  GraphPanel.cpp  GraphPanel.hpp  ModuleContext.hpp  Oscillator.cpp  Oscillator.hpp  Oscillator.ui  Setup.cpp  Setup.hpp  Setup.ui  StateManager.cpp  Synth.cpp  Synth.hpp  Synth.ui  main.cpp
gui/api/: ApiClient.cpp  ApiClient.hpp
gui/app/: ModuleContext.hpp  Setup.cpp  Setup.hpp  Synth.cpp  Synth.hpp  Synth.ui  Theme.cpp  Theme.hpp
gui/core/: ApiClient.cpp  ApiClient.hpp  GraphPanel.cpp  GraphPanel.hpp  ModuleContext.hpp  Setup.cpp  Setup.hpp  StateManager.cpp  StateManager.hpp  Synth.cpp  Synth.hpp  Synth.ui  Theme.cpp  Theme.hpp
gui/graphics/: ComponentNode.cpp  ComponentNode.hpp  ConnectionCable.cpp  ConnectionCable.hpp  GraphNode.cpp  GraphNode.hpp  GroupNode.cpp  GroupNode.hpp  SocketWidget.cpp  SocketWidget.hpp  ToastNotification.cpp  ToastNotification.hpp
gui/interfaces/: ISocketLookup.hpp
gui/managers/: ComponentManager.cpp  ComponentManager.hpp  ConnectionManager.cpp  ConnectionManager.hpp  StateManager.cpp  StateManager.hpp
gui/models/: ComponentModel.cpp  ComponentModel.hpp  GroupModel.cpp  GroupModel.hpp  ModulationModel.cpp  ModulationModel.hpp
gui/modules/: ModuleWidget.cpp  ModuleWidget.hpp  Oscillator.cpp
gui/patch/: ConnectionCable.cpp  ConnectionCable.hpp  ConnectionManager.cpp  ConnectionManager.hpp  SocketWidget.cpp  SocketWidget.hpp
gui/util/: util.cpp  util.hpp
gui/views/: ComponentEditor.cpp  ComponentEditor.hpp  ConnectionRenderer.cpp  ConnectionRenderer.hpp  GraphPanel.cpp  GraphPanel.hpp  GroupEditor.cpp  GroupEditor.hpp  ModulationEditor.cpp  ModulationEditor.hpp
gui/widgets/: CollectionWidget.hpp  ComponentDetailWidget.cpp  ComponentDetailWidget.hpp  ComponentParameters.cpp  ComponentParameters.hpp  ComponentWidget.cpp  ComponentWidget.hpp  ConnectionCable.hpp  EditableLabel.hpp  ModulationControl.cpp  ModulationControl.hpp  ModulationIndicator.cpp  ModulationIndicator.hpp  ModuleDetailWidget.cpp  ModuleDetailWidget.hpp  ModuleWidget.cpp  ModuleWidget.hpp  NoteWidget.cpp  NoteWidget.hpp  Oscillator.cpp  Oscillator.hpp  ParameterWidget.cpp  ParameterWidget.hpp  PianoRollWidget.cpp  PianoRollWidget.hpp  SequenceWidget.cpp  SequenceWidget.hpp  SocketContainerWidget.cpp  SocketContainerWidget.hpp  SocketWidget.cpp  SocketWidget.hpp  SpectrumAnalyzerWidget.cpp  SpectrumAnalyzerWidget.hpp  SwitchWidget.cpp  SwitchWidget.hpp
shared/: CMakeLists.txt
shared/config/: Config.cpp  Config.hpp  config.json
shared/meta/: CollectionDescriptor.hpp  CollectionStructure.hpp  ComponentDescriptor.hpp  ComponentRegistry.cpp  ComponentRegistry.hpp  ModuleDescriptor.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp
shared/requests/: ConnectionRequest.hpp
shared/types/: CollectionRequest.hpp  CollectionType.hpp  ComponentType.hpp  ConnectionRequest.hpp  FilterType.hpp  ModulatorType.hpp  ModuleType.hpp  ParameterType.cpp  ParameterType.hpp  ScaleNote.hpp  ScaleType.hpp  SequenceData.hpp  SocketType.cpp  SocketType.hpp  Waveform.hpp
synth/: CMakeLists.txt  compile_commands.json
synth/src/: ApolloEngine.cpp  ApolloEngine.hpp  Engine.cpp  Engine.hpp  main.cpp
synth/src/api/: ApiHandler.cpp  ApiHandler.hpp  ConnectionRequest.hpp
synth/src/components/: ADSREnvelope.cpp  ADSREnvelope.hpp  BiquadFilter.cpp  BiquadFilter.hpp  Components.hpp  Components.hpp.in  Delay.cpp  Delay.hpp  Gain.hpp  LinearFader.cpp  LinearFader.hpp  MidiFilter.cpp  MidiFilter.hpp  MonophonicFilter.cpp  MonophonicFilter.hpp  Multiply.hpp  Oscillator.cpp  Oscillator.hpp  PolyOscillator.cpp  PolyOscillator.hpp  Sequencer.cpp  Sequencer.hpp  generate_components.py
synth/src/configs/: ADSREnvelopeConfig.hpp  BiquadFilterConfig.hpp  ComponentConfig.hpp  ComponentConfig.hpp.in  DelayConfig.hpp  GainConfig.hpp  LinearFaderConfig.hpp  MidiChordConfig.hpp  MidiFilterConfig.hpp  ModulatorConfig.hpp  ModuleConfig.hpp  MonophonicFilterConfig.hpp  MultiplyConfig.hpp  OscillatorConfig.hpp  PolyOscillatorConfig.hpp  SequencerConfig.hpp  generate_configs.py
synth/src/containers/: AtomicDouble.hpp  AtomicFloat.hpp  DelayBuffer.hpp  FixedPool.hpp  LockFreeRingBuffer.hpp  RTMap.hpp
synth/src/core/: BaseComponent.cpp  BaseComponent.hpp  BaseModulator.hpp  BaseModule.hpp  ComponentController.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentManager.hpp  Engine.cpp  Engine.hpp
synth/src/dsp/: AnalyticsEngine.cpp  AnalyticsEngine.hpp  Wavetable.cpp  Wavetable.hpp  detune.cpp  detune.hpp  math.hpp
synth/src/midi/: MidiCommand.cpp  MidiCommand.hpp  MidiController.cpp  MidiController.hpp  MidiEventHandler.cpp  MidiEventHandler.hpp  MidiEventListener.cpp  MidiEventListener.hpp  MidiEventQueue.hpp  MidiNote.cpp  MidiNote.hpp  MidiState.hpp  Sequence.hpp
synth/src/modulation/: ADSREnvelope.cpp  ADSREnvelope.hpp  BaseModulator.cpp  BaseModulator.hpp  LinearFader.cpp  LinearFader.hpp  ModulationController.hpp  Modulator.cpp  Modulator.hpp
synth/src/modules/: BaseModule.hpp  ModuleController.hpp  Oscillator.cpp  Oscillator.hpp  PolyOscillator.cpp  PolyOscillator.hpp  SignalChain.hpp
synth/src/params/: ModulationParameter.hpp  Parameter.cpp  Parameter.hpp  ParameterCollection.hpp  ParameterListener.hpp  ParameterMap.cpp  ParameterMap.hpp
synth/src/signal/: SignalChain.hpp  SignalController.hpp
